# start-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/: eventbus.h  log.h  service_locator.h
engine/include/engine/input/: input_devices.h  input_manager.h
engine/include/engine/platform/: entry_point.h
engine/shaders/: triangle.vert
engine/src/: engine.cpp
engine/src/input/: glfw_input.cpp  glfw_input.h  input_manager.cpp
engine/src/platform/: game.cpp  glfw_window.cpp  glfw_window.h
engine/src/rendering/vulkan/: vk_renderer.cpp
src/: main.cpp
